/*
Copyright 2021 The tKeel Authors.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package io.tkeel.security.api.tenant.v1;

option go_package = "github.com/tkeel-io/tkeel/api/tenant/v1;v1";
option java_multiple_files = true;
option java_package = "io.tkeel.security.api.tenant.v1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // @msg=未知类型
  // @code=UNKNOWN
  ERR_UNKNOWN = 0;
  // @msg=已存在的租户
  // @code=INTERNAL
  ERR_TENANT_ALREADY_EXISTED = 1;
  // @msg=获取 租户列表数据出错
  // @code=INTERNAL
  ERR_LIST_TENANT = 2;
  // @msg=请求参数无效
  // @code=INVALID_ARGUMENT
  ERR_INVALID_ARGUMENT = 3;
  // @msg=请求后端存储错误
  // @code=INTERNAL
  ERR_INTERNAL_STORE = 4;
  // @msg=内部错误
  // @code=INTERNAL
  ERR_INTERNAL_ERROR = 5;
  // @msg=创建租户错误
  // @code=INTERNAL
  ERR_STORE_CREAT_TENANT = 6;
  // @msg=创建已存在的用户
  // @code=INTERNAL
  ERR_ALREADY_EXISTED_USER_ = 7;
  // @msg=资源不存在
  // @code=INTERNAL
  ERR_RESOURCE_NOT_FOUND = 8;
  // @msg=创建租户管理员用户错误
  // @code=INTERNAL
  ERR_STORE_CREAT_ADMIN = 9;
  // @msg=创建租户管理员角色错误
  // @code=INTERNAL
  ERR_STORE_CREAT_ADMIN_ROLE = 10;
}